fix: fixes marker not showing in safari / iOS browsers

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -16,12 +16,19 @@ body, html {
   box-sizing: border-box;
 }
 
+ol,
+ul {
+  list-style: none;
+  margin: 0.5rem;
+  padding: 0;
+}
+
 li {
-  padding-left: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
-li::marker {
+li::before {
   color: variables.$tart-orange;
   content: '●' !important;
+  margin-right: 0.5rem;
 }
